Fixed initial speed, delete tablestate file after use, visual for optimal shot